# Cuna

./: Cargo.toml  docker-compose.yml
.github/workflows/: test.yml
auth/: Cargo.toml
auth/src/api/: controller.rs
crates/auth/: Cargo.toml
crates/auth/auth_adapter/: Cargo.toml
crates/auth/auth_adapter/src/: lib.rs  password_validator.rs  pg_auth_repository.rs
crates/auth/auth_adapter/src/entity/: auth_data_entity.rs  mod.rs
crates/auth/auth_adapter/src/mapper/: auth_data_entity_mapper.rs  mod.rs
crates/auth/auth_adapters/: Cargo.toml
crates/auth/auth_api/: Cargo.toml
crates/auth/auth_api/src/: controller.rs  lib.rs  resolve_error.rs
crates/auth/auth_api/src/dto/: login_data_dto.rs  mod.rs  token_pair_dto.rs
crates/auth/auth_api/src/mapper/: mod.rs  token_pair_dto_mapper.rs
crates/auth/auth_api/src/middleware/: api_key_middleware.rs  basic_auth_middleware.rs
crates/auth/auth_domain/: Cargo.toml
crates/auth/auth_domain/src/: error.rs  port.rs
crates/auth/auth_domain/src/model/: auth_data.rs  login_data.rs  mod.rs  token_pair.rs
crates/auth/auth_domain/src/use_case/: login.rs
crates/common/common_adapter/: Cargo.toml
crates/common/common_adapters/: Cargo.toml
crates/common/common_adapters/src/: lib.rs  postgres.rs  sqlx_transaction_context.rs  sqlx_transaction_context_provider.rs
crates/common/common_api/: Cargo.toml
crates/common/common_api/src/: lib.rs  with_tx.rs
crates/common/common_api/src/dto/: error_dto.rs
crates/common/common_api/src/mapper/: error_dto_mapper.rs  mod.rs
crates/common/common_api/src/middleware/: basic_auth_middleware.rs  mod.rs
crates/common/common_domain/: Cargo.toml
crates/common/common_domain/src/: config.rs  db.rs  db_error.rs  define_port.rs  lib.rs  repository_provider.rs  transaction_context.rs  transaction_context_provider.rs  transaction_result.rs
crates/entrypoint/: Cargo.toml
crates/entrypoint/src/: main.rs
crates/macro/with_executor/: Cargo.toml
crates/macro/with_executor/src/: lib.rs
crates/profile/profile_adapter/: Cargo.toml  sqlx-data.json
crates/profile/profile_adapter/src/: pg_profile_repository.rs
crates/profile/profile_adapters/: Cargo.toml
crates/profile/profile_adapters/src/: bcrypt_hasher.rs  lib.rs  pg_profile_repository.rs
crates/profile/profile_adapters/src/entity/: mod.rs
crates/profile/profile_api/: Cargo.toml
crates/profile/profile_api/src/: controller.rs  lib.rs  resolve_error.rs
crates/profile/profile_api/src/dto/: create_profile_dto.rs
crates/profile/profile_domain/: Cargo.toml
crates/profile/profile_domain/src/: error.rs  lib.rs  port.rs
crates/profile/profile_domain/src/model/: mod.rs  profile_creation_data.rs
crates/profile/profile_domain/src/port/: create_profile.rs  profile_repository.rs
crates/profile/profile_domain/src/use_case/: create_profile_use_case.rs  mod.rs
entrypoint/: Cargo.toml
entrypoint/src/: main.rs
migrations/: 20220620185635_init.up.sql  20220620190054_setup_tables.down.sql  20220620190054_setup_tables.up.sql
