[package]
name = "entrypoint"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
auth_api = { path = "../auth/auth_api" }
common_domain = { path = "../common/common_domain" }
env_logger = "0.9"
log = "0.4"
profile_api = { path = "../profile/profile_api" }
sqlx = { version = "0.6", features = [
  "runtime-actix-rustls",
  "postgres",
  "chrono",
] }
