[package]
name = "auth_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
auth_domain = { path = "../auth_domain" }
common_api = { path = "../../common/common_api" }
common_domain = { path = "../../common/common_domain" }
chrono = "0.4.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["runtime-actix-rustls"] }
regex = "1.6.0"
