[package]
name = "profile_adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
bcrypt = "0.13.0"
common_domain = { path = "../../common/common_domain" }
profile_domain = { path = "../profile_domain" }
sqlx = { version = "0.6", features = [
  "runtime-actix-rustls",
  "postgres",
  "chrono",
  "offline",
] }
