[package]
name = "profile_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
chrono = "0.4.19"
common_api = { path = '../../common/common_api' }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5", features = [
  "runtime-actix-rustls",
  "postgres",
  "chrono",
] }
validator = { version = "0.15", features = ["derive"] }
