[package]
name = "profile_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
chrono = "0.4.19"
common_api = { path = "../../common/common_api" }
common_domain = { path = "../../common/common_domain" }
profile_adapters = { path = "../profile_adapters" }
profile_domain = { path = "../profile_domain" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = "0.6"
validator = { version = "0.15", features = ["derive"] }
